apollo-router/tests/telemetry/snapshots/telemetry_test__telemetry__tracing__traced_basic_request.snap
---
source: apollo-router/tests/telemetry/tracing.rs
expression: get_spans()
---
{
  "name": "telemetry_test::telemetry::tracing::root",
  "record": {
    "entries": [],
    "metadata": {
      "name": "root",
      "target": "telemetry_test::telemetry::tracing",
      "level": "ERROR",
      "module_path": "telemetry_test::telemetry::tracing",
      "fields": {
        "names": []
      }
    }
  },
  "children": {
    "apollo_router::plugins::telemetry::span_factory::request": {
      "name": "apollo_router::plugins::telemetry::span_factory::request",
      "record": {
        "entries": [
          [
            "http.method",
            "POST"
          ],
          [
            "http.request.method",
            "POST"
          ],
          [
            "http.route",
            "http://default/"
          ],
          [
            "http.flavor",
            "HTTP/1.1"
          ],
          [
            "otel.kind",
            "SERVER"
          ],
          [
            "apollo_private.request",
            true
          ],
          [
            "graphql.operation.type",
            "query"
          ],
          [
            "otel.name",
            "query"
          ]
        ],
        "metadata": {
          "name": "request",
          "target": "apollo_router::plugins::telemetry::span_factory",
          "level": "INFO",
          "module_path": "apollo_router::plugins::telemetry::span_factory",
          "fields": {
            "names": [
              "http.method",
              "http.request.method",
              "http.route",
              "http.flavor",
              "otel.name",
              "otel.kind",
              "graphql.operation.name",
              "graphql.operation.type",
              "apollo_private.request"
            ]
          }
        }
      },
      "children": {
        "apollo_router::plugins::telemetry::span_factory::router": {
          "name": "apollo_router::plugins::telemetry::span_factory::router",
          "record": {
            "entries": [
              [
                "http.method",
                "POST"
              ],
              [
                "http.request.method",
                "POST"
              ],
              [
                "http.route",
                "http://default/"
              ],
              [
                "http.flavor",
                "HTTP/1.1"
              ],
              [
                "trace_id",
                "[REDACTED]"
              ],
              [
                "otel.kind",
                "INTERNAL"
              ],
              [
                "apollo_private.duration_ns",
                0
              ],
              [
                "otel.status_code",
                "Ok"
              ]
            ],
            "metadata": {
              "name": "router",
              "target": "apollo_router::plugins::telemetry::span_factory",
              "level": "INFO",
              "module_path": "apollo_router::plugins::telemetry::span_factory",
              "fields": {
                "names": [
                  "http.method",
                  "http.request.method",
                  "http.route",
                  "http.flavor",
                  "trace_id",
                  "client.name",
                  "client.version",
                  "otel.kind",
                  "otel.status_code",
                  "apollo_private.duration_ns",
                  "apollo_private.http.request_headers",
                  "apollo_private.http.response_headers"
                ]
              }
            }
          },
          "children": {
            "apollo_router::services::router::service::receive_body": {
              "name": "apollo_router::services::router::service::receive_body",
              "record": {
                "entries": [],
                "metadata": {
                  "name": "receive_body",
                  "target": "apollo_router::services::router::service",
                  "level": "DEBUG",
                  "module_path": "apollo_router::services::router::service",
                  "fields": {
                    "names": []
                  }
                }
              },
              "children": {}
            },
            "apollo_router::services::layers::query_analysis::parse_query": {
              "name": "apollo_router::services::layers::query_analysis::parse_query",
              "record": {
                "entries": [
                  [
                    "otel.kind",
                    "INTERNAL"
                  ]
                ],
                "metadata": {
                  "name": "parse_query",
                  "target": "apollo_router::services::layers::query_analysis",
                  "level": "INFO",
                  "module_path": "apollo_router::services::layers::query_analysis",
                  "fields": {
                    "names": [
                      "otel.kind"
                    ]
                  }
                }
              },
              "children": {}
            },
            "apollo_router::plugins::telemetry::span_factory::supergraph": {
              "name": "apollo_router::plugins::telemetry::span_factory::supergraph",
              "record": {
                "entries": [
                  [
                    "otel.kind",
                    "INTERNAL"
                  ],
                  [
                    "graphql.document",
                    "{ topProducts { name name2:name } }"
                  ],
                  [
                    "apollo_private.field_level_instrumentation_ratio",
                    0.0
                  ],
                  [
                    "apollo_private.graphql.variables",
                    "{}"
                  ],
                  [
                    "apollo_private.operation_signature",
                    "# -\n{topProducts{name name}}"
                  ]
                ],
                "metadata": {
                  "name": "supergraph",
                  "target": "apollo_router::plugins::telemetry::span_factory",
                  "level": "INFO",
                  "module_path": "apollo_router::plugins::telemetry::span_factory",
                  "fields": {
                    "names": [
                      "otel.kind",
                      "graphql.operation.name",
                      "graphql.document",
                      "apollo_private.field_level_instrumentation_ratio",
                      "apollo_private.operation_signature",
                      "apollo_private.graphql.variables"
                    ]
                  }
                }
              },
              "children": {
                "apollo_router::services::supergraph::service::query_planning": {
                  "name": "apollo_router::services::supergraph::service::query_planning",
                  "record": {
                    "entries": [
                      [
                        "otel.kind",
                        "INTERNAL"
                      ],
                      [
                        "histogram.apollo_router_cache_miss_time",
                        "[REDACTED]"
                      ],
                      [
                        "kind",
                        "query planner"
                      ],
                      [
                        "storage",
                        "memory"
                      ],
                      [
                        "monotonic_counter.apollo_router_cache_miss_count",
                        1
                      ],
                      [
                        "kind",
                        "query planner"
                      ],
                      [
                        "storage",
                        "memory"
                      ],
                      [
                        "histogram.apollo_router_query_planning_time",
                        "[REDACTED]"
                      ],
                      [
                        "value.apollo_router_cache_size",
                        1
                      ],
                      [
                        "kind",
                        "query planner"
                      ],
                      [
                        "storage",
                        "memory"
                      ]
                    ],
                    "metadata": {
                      "name": "query_planning",
                      "target": "apollo_router::services::supergraph::service",
                      "level": "INFO",
                      "module_path": "apollo_router::services::supergraph::service",
                      "fields": {
                        "names": [
                          "otel.kind"
                        ]
                      }
                    }
                  },
                  "children": {}
                },
                "apollo_router::plugins::telemetry::execution": {
                  "name": "apollo_router::plugins::telemetry::execution",
                  "record": {
                    "entries": [
                      [
                        "otel.kind",
                        "INTERNAL"
                      ],
                      [
                        "graphql.operation.type",
                        "query"
                      ]
                    ],
                    "metadata": {
                      "name": "execution",
                      "target": "apollo_router::plugins::telemetry",
                      "level": "INFO",
                      "module_path": "apollo_router::plugins::telemetry",
                      "fields": {
                        "names": [
                          "otel.kind",
                          "graphql.operation.type"
                        ]
                      }
                    }
                  },
                  "children": {
                    "apollo_router::query_planner::execution::fetch": {
                      "name": "apollo_router::query_planner::execution::fetch",
                      "record": {
                        "entries": [
                          [
                            "otel.kind",
                            "INTERNAL"
                          ],
                          [
                            "apollo.subgraph.name",
                            "products"
                          ],
                          [
                            "apollo_private.sent_time_offset",
                            0
                          ]
                        ],
                        "metadata": {
                          "name": "fetch",
                          "target": "apollo_router::query_planner::execution",
                          "level": "INFO",
                          "module_path": "apollo_router::query_planner::execution",
                          "fields": {
                            "names": [
                              "otel.kind",
                              "apollo.subgraph.name",
                              "apollo_private.sent_time_offset"
                            ]
                          }
                        }
                      },
                      "children": {
                        "apollo_router::query_planner::fetch::make_variables": {
                          "name": "apollo_router::query_planner::fetch::make_variables",
                          "record": {
                            "entries": [],
                            "metadata": {
                              "name": "make_variables",
                              "target": "apollo_router::query_planner::fetch",
                              "level": "DEBUG",
                              "module_path": "apollo_router::query_planner::fetch",
                              "fields": {
                                "names": []
                              }
                            }
                          },
                          "children": {}
                        },
                        "apollo_router::plugins::telemetry::span_factory::subgraph": {
                          "name": "apollo_router::plugins::telemetry::span_factory::subgraph",
                          "record": {
                            "entries": [
                              [
                                "apollo.subgraph.name",
                                "products"
                              ],
                              [
                                "graphql.document",
                                "{topProducts{name name2:name}}"
                              ],
                              [
                                "graphql.operation.name",
                                ""
                              ],
                              [
                                "otel.kind",
                                "INTERNAL"
                              ],
                              [
                                "otel.status_code",
                                "Ok"
                              ]
                            ],
                            "metadata": {
                              "name": "subgraph",
                              "target": "apollo_router::plugins::telemetry::span_factory",
                              "level": "INFO",
                              "module_path": "apollo_router::plugins::telemetry::span_factory",
                              "fields": {
                                "names": [
                                  "apollo.subgraph.name",
                                  "graphql.document",
                                  "graphql.operation.name",
                                  "otel.kind",
                                  "apollo_private.ftv1",
                                  "otel.status_code"
                                ]
                              }
                            }
                          },
                          "children": {}
                        },
                        "apollo_router::query_planner::fetch::response_insert": {
                          "name": "apollo_router::query_planner::fetch::response_insert",
                          "record": {
                            "entries": [],
                            "metadata": {
                              "name": "response_insert",
                              "target": "apollo_router::query_planner::fetch",
                              "level": "DEBUG",
                              "module_path": "apollo_router::query_planner::fetch",
                              "fields": {
                                "names": []
                              }
                            }
                          },
                          "children": {}
                        }
                      }
                    },
                    "apollo_router::services::execution::service::format_response": {
                      "name": "apollo_router::services::execution::service::format_response",
                      "record": {
                        "entries": [],
                        "metadata": {
                          "name": "format_response",
                          "target": "apollo_router::services::execution::service",
                          "level": "DEBUG",
                          "module_path": "apollo_router::services::execution::service",
                          "fields": {
                            "names": []
                          }
                        }
                      },
                      "children": {}
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}
